# ai-startup

./: .gitignore  DEPLOYMENT.md  README.md  README_ai.md  ai-startup.service  deploy.sh  pyproject.toml  requirements.txt  setup.sh  test.md
`src/: main.py`  orchestrator.py`
`src/agents/: base.py`  code_reader.py`  developer.py`  founder.py`
proposals/: 1746333901_proposal.md  1746334418_proposal.md  1746370596_proposal.md  1746378392_proposal.md  1746380077_proposal.md
src/: __init__.py  agents.py  code_manager.py  config.py  main.py  observability.py  orchestrator.py  rate_limits.py  repo_reader.py  safety_checker.py
src/agents/: __init__.py  base.py  code_reader.py  developer.py  founder.py
src/models/: proposal.py (new file)
src/prompts/: code_summary.txt  developer.txt  founder.txt
tests/: test_code_manager.py  test_code_reader.py  test_founder_ai.py (new file)  test_main.py  test_observability.py  test_orchestrator.py  test_proposal.py (new file)  test_repo_reader.py  test_safety_checker.py
